Fix menu being displayed behind content

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,7 @@ nav{
 
 #burger-menu.open{
   display: block;
+  z-index: 1000;
 }
 
 ul{
